# CURIA_pipeline

./: .gitignore  .gitmodules  LICENSE  OUTPUT_STRUCTURE.md  README.md  cleanup_outputs.py  curia.py  download_model.py  download_rnafm_model.py  environment.yaml  pyproject.toml  temp.py  test_run.md
analysis_notebooks/: dissect_short_rna.ipynb  generate_logo.ipynb
diagnostics/: show_query_regions_histogram.py  show_reference_joblist_histogram.py  show_reference_lncrna_histogram.py  test_model_segfault.py
helpers/: resolve_gene_names.py
input_data/: create_smoke_test_data.ipynb  create_test_data.ipynb  hg38_filter.ipynb  readme.md
input_data/2bit/: readme.md  readme.txt
input_data/chains/: readme.md  readme.txt
input_data/mm39_annotation_validation/: make_mm39_validation_data.ipynb  readme.txt
input_data/reference_annotation/: hg38.tRNA.tsv  readme.md  smoke_test.bed  smoke_test.metadata.tsv  test_sample.bed  test_sample.metadata.tsv
modules/GPU_executor/: __init__.py  benchmark_batch_size.py  (+3 more)
preprint/: Makefile  create_figure_1.ipynb  genomes_panel.tsv  island_annotation_overlap.ipynb  island_phylo_conservation.ipynb  logreg_roc_auc.ipynb  main.tex  readme.txt  references.bib
preprint_results/: lncRNAs_with_conserved_cores.txt  version.txt
validation/: debug_short_rna_detailed.ipynb  gene_pipeline_diagnostic.ipynb  lncRNA_bulk_validation.ipynb  lncRNA_case_studies.ipynb  lncRNA_primary_only_validation.ipynb  lncRNA_selected_validation.ipynb  notes.md  quick_test_validation.ipynb  short_ncRNA_quick_validation.ipynb  short_ncRNA_validation.ipynb
(+105 files in other folders)
