[project]
name = "curia-pipeline"
version = "0.1.0"
description = "Cross-species Unified ncRNA Inference and Annotation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=0.24",
    "pandas>=1.3",
    "tqdm>=4.60",
    "pyrion>=0.3.1",
    "torch>=1.9",
    "ptflops>=0.6",
]
